[package]
name = "common-passwords"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
#debug = true

[profile.bench]
debug = true

[build-dependencies]
xz2 = "0.1"
phf_codegen = { git = "https://github.com/sfackler/rust-phf" }

[dependencies]
phf = { git = "https://github.com/sfackler/rust-phf" }
wasm-bindgen = "0.2.48"
