[package]
name = "common-passwords"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
#debug = true

[profile.bench]
debug = true

[build-dependencies]
fst = { version = "0.3", default-features = false }
xz2 = "0.1"

[dependencies]
fst = { version = "0.3", default-features = false }
lazy_static = "1.3"
wasm-bindgen = "0.2.48"
